<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".AppointmentDetails">
    <LinearLayout
        android:id="@+id/top_bar_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="7dp">


        <ImageView
            android:id="@+id/back_arrow"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/back_arrow"
            app:tint="@color/red"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:letterSpacing="0.1"
            android:text="@string/appointment_details"
            android:textAlignment="center"
            android:textColor="@color/my_primary"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_view_background"
            android:backgroundTint="@color/orange"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teacherNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:text="@string/teacher_name"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/teacherEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:text="@string/email"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:text="@string/date"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/show_time"
                android:textSize="14sp" />



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>