<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".createAppointment">
    <LinearLayout
        android:id="@+id/top_bar_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="7dp">


        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/back_arrow"
            app:tint="@color/red" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:letterSpacing="0.09"
            android:text="@string/create_appointment"
            android:textAlignment="center"
            android:textColor="@color/my_primary"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:elevation="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/enter_details_background"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="20dp"
            android:background="@drawable/enter_details_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:elevation="20dp"
                android:background="@drawable/select_date_time_bg"
                android:backgroundTint="@color/my_primary"
                android:layout_marginEnd="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/datePickerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/select_date"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/enter_details_background"
                    android:text="@string/show_date"
                    android:textSize="15sp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:elevation="20dp"
                android:background="@drawable/select_date_time_bg"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/startTimePickerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/select_time" />

                <TextView
                    android:id="@+id/startTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/enter_details_background"
                    android:text="@string/from_to"
                    android:textSize="15sp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/createAppointmentBtn"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:elevation="20dp"
            android:layout_gravity="center"
            android:text="@string/create_appointment"
            android:textSize="20sp"
            android:layout_marginTop="40dp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:visibility="invisible"/>

    </LinearLayout>
    <View
        android:id="@+id/under_view"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:backgroundTint="@color/light"
        android:layout_alignParentBottom="true"
        android:background="@drawable/under_background_view"/>

</RelativeLayout>