<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".loginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="50sp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:textAlignment="center">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.09"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:elevation="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:letterSpacing="0.09"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:elevation="10dp"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_background">

        </EditText>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp">

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerText"
            android:text="@string/register_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:letterSpacing="0.08"
            android:layout_marginTop="20dp"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.09">
        </TextView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="invisible">
        </ProgressBar>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/under_background_view">
    </View>

</RelativeLayout>