<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".viewTasks">

    <LinearLayout
        android:id="@+id/top_bar_nav"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">


        <ImageView
            android:id="@+id/back_arrow"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/back_arrow"
            app:tint="@color/red"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:letterSpacing="0.1"
            android:text="@string/task_details"
            android:textAlignment="center"
            android:textColor="@color/my_primary"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/task_name"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:textColor="@color/my_secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/show_task_name"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/task_description"
                android:textColor="@color/my_secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="7dp"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:hint="@string/show_task_description"
                android:padding="10dp" />


        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/under_background_view">
    </View>

</RelativeLayout>