<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".teacherTask">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_views">
    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/back_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.1"
                    android:text="@string/welcome"
                    android:textColor="@color/red"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/get_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_name" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/userProfileTv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:src="@drawable/profile_image" />
        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="3dp"
            android:queryHint="@string/task_name"
            android:focusable="false"
            android:background="@drawable/search_bar_background"
            android:iconifiedByDefault="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:letterSpacing="0.1"
            android:textColor="@color/black"
            android:text="@string/all_tasks"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskListRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>