<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".studentProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/top_bar_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="7dp">


            <ImageView
                android:id="@+id/back_arrow"
                android:clickable="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:src="@drawable/home_icon"
                app:tint="@color/red"
                android:focusable="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/my_primary"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="40dp"
                android:elevation="20dp"
                android:src="@drawable/profile_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@color/my_secondary"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:letterSpacing="0.1"/>
            <TextView
                android:id="@+id/prof_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:letterSpacing="0.1"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_number"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/my_secondary"
                android:layout_marginBottom="2dp"
                android:letterSpacing="0.1"/>

            <TextView
                android:id="@+id/prof_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:hint="@string/id_number"
                android:letterSpacing="0.1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textColor="@color/my_secondary"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:letterSpacing="0.1"/>


            <TextView
                android:id="@+id/prof_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"

                android:hint="@string/email"
                android:letterSpacing="0.1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:elevation="30dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/under_background_view">
    </View>

</RelativeLayout>